[package]
name = "opencan"
version = "0.1.0"
edition = "2021"
description = "Lightweight Rust OpenClaw alternative with local memory and session logging"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jedaye3/OpenCan"
homepage = "https://github.com/jedaye3/OpenCan"
keywords = ["cli", "assistant", "openai", "developer-tools"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.12"
